<resources>
    <string name="app_name">Lab_1</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_start">First time here? Register</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
</resources>